fix(theme): checkbox z-index set to zero from -1

--- a/projects/logo-software/theme/scss/bootstrap/_custom-control.scss
+++ b/projects/logo-software/theme/scss/bootstrap/_custom-control.scss
@@ -28,6 +28,7 @@
     input {
       display: inline-block !important;
       width: $width !important;
+      z-index: 0;
 
       &:checked, &:indeterminate {
         & + label {
